# dpbench

./: .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  alembic.ini  automate_run.py  dpbench-env-linux.yml  driver.py  execute_implementations.py  options.py  plot_graphs.py  pyproject.toml  run.py  setup.py  util.py
dpbench/benchmarks/: CMakeLists.txt
dpbench/benchmarks/black_scholes/: CMakeLists.txt  __init__.py  black_scholes.py  black_scholes_cupy.py  black_scholes_dpcpp.py  black_scholes_dpnp.py  black_scholes_initialize.py  black_scholes_numba_cuda.py  black_scholes_numba_dpex_k.py  black_scholes_numba_dpex_n.py  black_scholes_numba_dpex_p.py  black_scholes_numba_dppy_k.py  black_scholes_numba_mlir_k.py  black_scholes_numba_mlir_n.py  black_scholes_numba_mlir_p.py  black_scholes_numba_n.py  black_scholes_numba_np.py  black_scholes_numba_npr.py  black_scholes_numba_o.py  black_scholes_numpy.py  black_scholes_python.py
dpbench/benchmarks/black_scholes/black_scholes_sycl_native_ext/: CMakeLists.txt  __init__.py  setup.py
dpbench/benchmarks/dbscan/: CMakeLists.txt  __init__.py  dbscan.py  dbscan_initialize.py  dbscan_numba_dpex_k.py  dbscan_numba_dpex_n.py  dbscan_numba_dpex_p.py  dbscan_numba_mlir_k.py  dbscan_numba_mlir_p.py  dbscan_numba_n.py  dbscan_numba_npr.py  dbscan_numpy.py  dbscan_python.py  dbscan_utils.py
dpbench/benchmarks/dbscan/dbscan_sycl_native_ext/: CMakeLists.txt  __init__.py
dpbench/benchmarks/default/: CMakeLists.txt
dpbench/benchmarks/default/black_scholes/: CMakeLists.txt  __init__.py  black_scholes_dpnp.py  black_scholes_initialize.py  black_scholes_numba_dpex_k.py  black_scholes_numba_dpex_n.py  black_scholes_numba_dpex_p.py  black_scholes_numba_mlir_k.py  black_scholes_numba_mlir_p.py  black_scholes_numba_n.py  black_scholes_numba_np.py  black_scholes_numba_npr.py  black_scholes_python.py
dpbench/benchmarks/default/dbscan/: CMakeLists.txt  __init__.py  dbscan_initialize.py  dbscan_numba_dpex_k.py  dbscan_numba_dpex_p.py  dbscan_numba_n.py  dbscan_numba_npr.py  dbscan_python.py
dpbench/benchmarks/default/gpairs/: gpairs_cupy.py  gpairs_dpnp.py  gpairs_initialize.py  gpairs_numba_cuda.py  gpairs_numba_dpex_k.py
dpbench/benchmarks/default/kmeans/: kmeans_initialize.py  kmeans_numba_dpex_k.py  kmeans_numba_dpex_p.py  kmeans_numba_mlir_p.py  kmeans_numba_n.py
dpbench/benchmarks/default/knn/: CMakeLists.txt  knn_initialize.py  knn_numba_dpex_k.py  knn_numba_dpex_p.py  knn_python.py
dpbench/benchmarks/default/l2_norm/: CMakeLists.txt  __init__.py  l2_norm_cupy.py  l2_norm_dpnp.py  l2_norm_numba_cuda.py  l2_norm_numba_dpex_k.py  l2_norm_numba_dpex_p.py  l2_norm_numba_mlir_k.py  l2_norm_numba_mlir_n.py  l2_norm_numba_mlir_p.py  l2_norm_numba_npr.py
dpbench/benchmarks/default/pairwise_distance/: CMakeLists.txt  pairwise_distance_cupy.py  pairwise_distance_numba_dpex_k.py  pairwise_distance_numba_mlir_n.py  pairwise_distance_numba_mlir_p.py
dpbench/benchmarks/default/pca/: __init__.py  pca_cupy.py  pca_dpnp.py  pca_numpy.py  pca_validate.py
dpbench/benchmarks/default/rambo/: rambo_dpnp.py  rambo_numba_dpex_k.py  rambo_numba_dpex_p.py  rambo_numba_mlir_k.py  rambo_numpy.py
dpbench/benchmarks/deformable_convolution/: CMakeLists.txt  __init__.py  deformable_convolution_initialize.py  deformable_convolution_numba_mlir_p.py  deformable_convolution_numba_npr.py  deformable_convolution_numpy.py
dpbench/benchmarks/deformable_convolution/deformable_convolution_sycl_native_ext/: __init__.py  (+1 more)
dpbench/benchmarks/gpairs/: CMakeLists.txt  __init__.py  gpairs.py  gpairs_cupy.py  gpairs_dpcpp.py  gpairs_dpnp.py  gpairs_initialize.py  gpairs_numba_dpex_k.py  gpairs_numba_dpex_p.py  gpairs_numba_mlir_k.py  gpairs_numba_mlir_p.py  gpairs_numba_n.py  gpairs_numba_npr.py  gpairs_numba_o.py  gpairs_numpy.py
dpbench/benchmarks/kmeans/: CMakeLists.txt  __init__.py  kmeans.py  kmeans_dpnp.py  kmeans_initialize.py  kmeans_numba_dpex_k.py  kmeans_numba_dpex_n.py  kmeans_numba_dpex_p.py  kmeans_numba_mlir_k.py  kmeans_numba_mlir_p.py  kmeans_numba_n.py  kmeans_numba_npr.py  kmeans_numba_o.py  kmeans_numpy.py  kmeans_python.py
dpbench/benchmarks/knn/: CMakeLists.txt  __init__.py  knn.py  knn_dpnp.py  knn_initialize.py  knn_numba_cuda.py  knn_numba_dpex_k.py  knn_numba_dpex_p.py  knn_numba_npr.py  knn_numpy.py  knn_python.py
dpbench/benchmarks/l2_distance/: __init__.py  l2_distance.py  l2_distance_numba_dpex_k.py  l2_distance_numba_dpex_n.py  l2_distance_numba_dpex_p.py  l2_distance_numba_n.py  l2_distance_numba_np.py  l2_distance_numpy.py
dpbench/benchmarks/l2_norm/: CMakeLists.txt  __init__.py  l2_norm_base.py  l2_norm_cupy.py  l2_norm_dpnp.py  l2_norm_initialize.py  l2_norm_numba_dpex_k.py  l2_norm_numba_dpex_n.py  l2_norm_numba_dpex_p.py  l2_norm_numba_mlir_p.py  l2_norm_numba_n.py  l2_norm_numba_np.py  l2_norm_numba_npr.py  l2_norm_numpy.py
dpbench/benchmarks/pairwise_distance/: CMakeLists.txt  __init__.py  pairwise_distance.py  pairwise_distance_base.py  pairwise_distance_cupy.py  pairwise_distance_dpcpp.py  pairwise_distance_dpnp.py  pairwise_distance_initialize.py  pairwise_distance_numba_cuda.py  pairwise_distance_numba_dpex_k.py  pairwise_distance_numba_dpex_n.py  pairwise_distance_numba_dpex_p.py  pairwise_distance_numba_mlir_k.py  pairwise_distance_numba_mlir_n.py  pairwise_distance_numba_mlir_p.py  pairwise_distance_numba_np.py  pairwise_distance_numba_npr.py  pairwise_distance_numpy.py
dpbench/benchmarks/pca/: __init__.py  pca_cupy.py  pca_dpnp.py  pca_initialize.py  pca_numba_dpex_n.py  pca_numba_n.py  pca_numba_np.py  pca_numpy.py
dpbench/benchmarks/rambo/: CMakeLists.txt  __init__.py  rambo_cupy.py  rambo_dpnp.py  rambo_initialize.py  rambo_numba_cuda.py  rambo_numba_dpex_k.py  rambo_numba_dpex_n.py  rambo_numba_dpex_p.py  rambo_numba_mlir_k.py  rambo_numba_mlir_n.py  rambo_numba_mlir_p.py  rambo_numba_n.py  rambo_numba_np.py  rambo_numba_npr.py  rambo_numpy.py  rambo_python.py
dpbench/benchmarks/rodinia/: CMakeLists.txt
(+1321 files in other folders)
