# SPDX-FileCopyrightText: 2022 - 2023 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

[tool.black]
exclude = "versioneer.py|dpbench/_version.py"
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80
skip = ["versioneer.py", "dpbench/_version.py"]

[project]
name = "dpbench"
authors = [{ name = "Intel Corp." }, { email = "diptorup.deb@intel.com" }]
description = "dpBench"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: Linux",
]
# https://github.com/pypa/pip/issues/6677
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "tomli>=2.0.0",
    "alembic>=1.10.0",
    "sqlalchemy>=2.0.0",
    "py-cpuinfo>=9.0.0",
    "scipy>=1.13.0",
    "scikit_learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "dpctl>=0.16.1",
    "dpnp>=0.14.0",
    "numba>=0.59.0",
    "numba_dpex>=0.23.0a0",
]
dynamic = ["version"]

[project.optional-dependencies]
numba-mlir = ["numba_mlir"]
color-config = ["pygments"]
npbench = ["dace", "dask", "legate"]
json-to-toml = ["tomli_w"]
expected-failure = ["tomlkit"]

# https://github.com/pypa/packaging-problems/issues/606
[project.urls]
"Homepage" = "https://https://github.com/IntelPython/dpbench"

[project.scripts]
# Keep consistent with conda build scripts
dpbench = "dpbench.console.entry:main"

[build-system]
# TODO: make it optional for no sycl build. Workaround: `--no-deps`.
# https://github.com/scikit-build/scikit-build/issues/981
requires = [
    "wheel>=0.43",
    "build>=1.1",
    "setuptools>=63.0.0",
    "scikit-build>=0.17.0",                      # sycl build dep
    "ninja>=1.11.1; platform_system!='Windows'", # sycl build dep
    "cmake>=3.29.0",                             # sycl build dep
    # We need dpctl for UsmNdArray integration for dpcpp code
    "dpctl>=0.16.1",
    "pybind11>=2.12.0",
    # WARNING: check with doc how to upgrade
    "versioneer[toml]==0.29",
]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "dpbench/_version.py"
parentdir_prefix = ""
