# SPDX-FileCopyrightText: 2022 - 2023 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(black_scholes)
add_subdirectory(pairwise_distance)
add_subdirectory(l2_norm)
add_subdirectory(rambo)
add_subdirectory(kmeans)
add_subdirectory(knn)
add_subdirectory(gpairs)
add_subdirectory(dbscan)
